[package]
name = "bls12-381"
version = "0.1.0"
edition = "2021"
authors = [ "Ingonyama" ]

[dependencies]
icicle-core = { path = "../icicle-core" }

hex = "*"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-381 = "0.3.0"

serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_cbor = "0.11.2"

rustacuda = "0.1"
rustacuda_core = "0.1"
rustacuda_derive = "0.1"

rand = "*" #TODO: move rand and ark dependencies to dev once random scalar/point generation is done "natively"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]
"criterion" = "0.4.0"

[features]
g2 = []
