
[workspace]
members = [
    "msm",
    "ntt",
    "polynomials",
    "arkworks-icicle-conversions",
    "hash-and-merkle", 
    "poseidon2",
]

[workspace.dependencies]
# Add any shared dependencies here
icicle-runtime = { path = "../../wrappers/rust/icicle-runtime" }
icicle-core = { path = "../../wrappers/rust/icicle-core" }
icicle-bn254 = { path = "../../wrappers/rust/icicle-curves/icicle-bn254" }
icicle-bls12-377 = { path = "../../wrappers/rust/icicle-curves/icicle-bls12-377" }
icicle-babybear = { path = "../../wrappers/rust/icicle-fields/icicle-babybear" }
icicle-m31 = {path = "../../wrappers/rust/icicle-fields/icicle-m31" }
rand = "0.8"
clap = { version = "<=4.4.12", features = ["derive"] }

